--- a/styles.css
+++ b/styles.css
@@ -59,15 +59,26 @@ width: 100%;
 					    min-height: 100vh;
 
 }
-		    padding: 0;
 
-footer {
-	    width: 100%;
+.tail {
 		    background-color: #333;
-			    color: white;
 				    text-align: center;
 					    padding: 15px;
+						width:100%;
+						height:5px;
+						display:flex;
+						flex-direction:column;
 }
+.tail ul {
+	list-style:none;
+	list-style-type:none;
+	}
+	footer{
+	
+background-color:#333;width:100%;display:flex;justify-content:center;color:white;
+		}
+footer ul {flex-direction:row;display:flex;list-style-type:none;gap:20px;
+	}
 
 
 .essay_proposal{
